--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,10 @@
 @import './submenu';
 @import './settings';
 @import './buttons';
+@import './clients';
+@import './form-viviendas';
+@import './form-user';
+@import './form-card';
 
 body {
   margin: 0;
